--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "daikon/data-structures",
     "type": "library",
-    "description": "Generic data-structure traits based on php/ds.",
+    "description": "Data-structure traits based on php/ds.",
     "keywords": [ "list", "map", "data-structures" ],
     "homepage": "https://github.com/daikon-cqrs/data-structures",
     "license": "MPL-2.0",
@@ -12,8 +12,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
-        "squizlabs/php_codesniffer": "^3.0",
-        "satooshi/php-coveralls": "master@dev"
+        "satooshi/php-coveralls": "master@dev",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": { "Daikon\\DataStructures\\" : "src" }
