--- a/composer.json
+++ b/composer.json
@@ -6,30 +6,58 @@
     "homepage": "https://github.com/daikon-cqrs/data-structures",
     "license": "MPL-2.0",
     "prefer-stable": true,
+    "authors": [
+        {
+            "name": "Contributors",
+            "homepage": "https://github.com/daikon-cqrs/data-structure/graphs/contributors"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/daikon-cqrs/data-structure/issues"
+    },
     "require": {
         "php": ">=7.1",
         "php-ds/php-ds": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
-        "satooshi/php-coveralls": "master@dev",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "vimeo/psalm": "^0.3.47",
+        "sebastian/phpcpd": "^3.0"
     },
     "autoload": {
-        "psr-4": { "Daikon\\DataStructure\\" : "src" }
+        "psr-4": {
+            "Daikon\\DataStructure\\" : "src"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "Daikon\\Tests\\DataStructure\\": "tests" }
+        "psr-4": {
+            "Daikon\\Tests\\DataStructure\\": "tests"
+        }
+    },
+    "archive": {
+        "exclude": [
+            "/build",
+            "/vendor"
+        ]
     },
     "scripts": {
         "build": [
-            "@test",
-            "@code-sniffer",
-            "@validate-json"
+            "@sniff",
+            "@tests"
         ],
-        "test": "phpunit",
-        "code-sniffer": "phpcs --extensions=php --standard=psr2 src tests",
-        "code-sniffer-autofix": "phpcbf --standard=psr2 -d tabWidth=4 src",
+        "test": "phpunit --no-coverage",
+        "tests": "phpunit",
+        "sniff": [
+            "@code-sniffer-autofix",
+            "@code-sniffer",
+            "@copy-paste-detector",
+            "@validate-json",
+            "psalm"
+        ],
+        "code-sniffer-autofix": "phpcbf --standard=PSR2 -d tabWidth=4 src/ tests/",
+        "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src/ tests/",
+        "copy-paste-detector": "phpcpd src/ tests/",
         "validate-json": "composer validate --no-check-all --no-check-lock",
         "validate-deps": "composer validate --with-dependencies --strict"
     }
