--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,21 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="true"
-    backupStaticAttributes="false"
-    colors="true"
-    convertErrorsToExceptions="true"
-    convertNoticesToExceptions="true"
-    convertWarningsToExceptions="true"
-    processIsolation="false"
-    stopOnFailure="false"
-    syntaxCheck="false"
->
+<phpunit backupGlobals="false"
+         backupStaticAttributes="false"
+         colors="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         forceCoversAnnotation="false"
+         mapTestClassNameToCoveredClassName="false"
+         processIsolation="false"
+         stopOnError="false"
+         stopOnFailure="false"
+         stopOnIncomplete="false"
+         stopOnSkipped="false"
+         syntaxCheck="true"
+         strict="false"
+         verbose="false"
+         bootstrap="tests/bootstrap.php">
     <testsuites>
         <testsuite name="main">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist>
+            <directory suffix=".php">src</directory>
+            <directory suffix=".php">tests</directory>
+<!--
+            <exclude>
+                <directory>tests/Fixture</directory>
+            </exclude>
+-->
+        </whitelist>
+    </filter>
     <logging>
-        <log type="coverage-html" target="build/coverage" title="accordia/data-structures code-coverage" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-html" target="build/coverage" title="code coverage report" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-php" target="build/logs/coverage.cov"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
         <log type="junit" target="build/logs/phpunit.xml" logIncompleteSkipped="false"/>
         <pmd>
@@ -34,10 +53,4 @@
             <rule class="PHPUnit_Util_Log_PMD_Rule_Function_NPathComplexity" threshold="200"/>
         </pmd>
     </logging>
-    <filter>
-        <whitelist>
-            <directory suffix=".php">src</directory>
-            <directory suffix=".php">tests</directory>
-        </whitelist>
-    </filter>
 </phpunit>
