--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "require-dev": {
         "phpunit/phpunit": "^6.2",
         "squizlabs/php_codesniffer": "^3.0",
-        "vimeo/psalm": "^0.3.47",
-        "sebastian/phpcpd": "^3.0"
+        "sebastian/phpcpd": "^3.0",
+        "vimeo/psalm": "^0.3.47"
     },
     "autoload": {
         "psr-4": {
