--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.1",
-        "php-ds/php-ds": "^1.1"
+        "php": "^7.2",
+        "php-ds/php-ds": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2",
-        "squizlabs/php_codesniffer": "^3.0",
-        "sebastian/phpcpd": "^3.0",
-        "vimeo/psalm": "^0.3.47"
+        "phpunit/phpunit": "^7.4",
+        "php-coveralls/php-coveralls": "^v2.1",
+        "squizlabs/php_codesniffer": "^3.3",
+        "vimeo/psalm": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -47,17 +47,16 @@
             "@sniff",
             "@tests"
         ],
-        "test": "phpunit --no-coverage",
-        "tests": "phpunit",
+        "code-sniffer": "phpcs --extensions=php --standard=psr2 src tests",
+        "copy-paste-detector": "phpcpd src/ tests/",
         "sniff": [
             "@code-sniffer",
             "@copy-paste-detector",
             "@validate-json",
             "psalm"
         ],
-        "code-sniffer-autofix": "phpcbf --standard=PSR2 -d tabWidth=4 src/ tests/",
-        "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src/ tests/",
-        "copy-paste-detector": "phpcpd src/ tests/",
+        "test": "phpunit --no-coverage",
+        "tests": "phpunit",
         "validate-json": "composer validate --no-check-all --no-check-lock",
         "validate-deps": "composer validate --with-dependencies --strict"
     }
