--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
-        "php-coveralls/php-coveralls": "^v2.1",
         "squizlabs/php_codesniffer": "^3.3",
+        "sebastian/phpcpd": "^4.1",
         "vimeo/psalm": "^2.0"
     },
     "autoload": {
@@ -43,12 +43,10 @@
         ]
     },
     "scripts": {
-        "build": [
-            "@sniff",
-            "@tests"
-        ],
-        "code-sniffer": "phpcs --extensions=php --standard=psr2 src tests",
-        "copy-paste-detector": "phpcpd src/ tests/",
+        "build": [ "@sniff", "@tests" ],
+        "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src/ tests/",
+        "code-sniffer-autofix": "phpcbf --standard=PSR2 -d tabWidth=4 src/ tests/",
+        "copy-paste-detector": "phpcpd src/ tests/ || true",
         "sniff": [
             "@code-sniffer",
             "@copy-paste-detector",
