--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,16 @@
         "php-ds/php-ds": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "squizlabs/php_codesniffer": "^3.3",
+        "phpunit/phpunit": "^8.0",
         "sebastian/phpcpd": "^4.1",
+        "squizlabs/php_codesniffer": "^3.3",
         "vimeo/psalm": "^2.0"
     },
     "autoload": {
-        "psr-4": {
-            "Daikon\\DataStructure\\" : "src"
-        }
+        "psr-4": { "Daikon\\DataStructure\\" : "src" }
     },
     "autoload-dev": {
-        "psr-4": {
-            "Daikon\\Tests\\DataStructure\\": "tests"
-        }
+        "psr-4": { "Daikon\\Tests\\DataStructure\\": "tests" }
     },
     "archive": {
         "exclude": [
