--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
             "/vendor"
         ]
     },
+    "suggest": {
+        "ext-ds": "Enables use of native data structure primitives."
+    },
     "scripts": {
         "build": [ "@sniff", "@tests" ],
         "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src tests",
