--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "daikon/data-structure",
     "type": "library",
     "description": "Immutable data-structure traits based on php/ds.",
-    "keywords": [ "list", "map", "vector", "data-structure", "immutable" ],
+    "keywords": [ "immutable", "list", "map", "vector", "data-structure" ],
     "homepage": "https://github.com/daikon-cqrs/data-structure",
     "license": "MPL-2.0",
     "prefer-stable": true,
@@ -10,11 +10,12 @@
     "require": {
         "php": "^7.4",
         "beberlei/assert": "^3.0",
+        "daikon/interop": "master@dev",
         "php-ds/php-ds": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
-        "sebastian/phpcpd": "^4.1",
+        "phpunit/phpunit": "^9.0",
+        "sebastian/phpcpd": "^5.0",
         "squizlabs/php_codesniffer": "^3.3",
         "vimeo/psalm": "^3.0"
     },
@@ -38,7 +39,7 @@
         "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src tests",
         "code-sniffer-autofix": "phpcbf --standard=PSR2 -d tabWidth=4 src tests",
         "copy-paste-detector": "phpcpd src tests || true",
-        "psalm": "psalm --show-info=true",
+        "psalm": "psalm --shepherd --show-info=true",
         "sniff": [
             "@code-sniffer",
             "@copy-paste-detector",
